--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crystalstudio.kakaosearchmap">
+    package="com.crystalstudio.handymap">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.TP11KakaoPlaceSearchApp"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".SplashActivity"
+            android:name="com.crystalstudio.handymap.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -25,9 +25,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PlaceUrlActivity"
+            android:name="com.crystalstudio.handymap.PlaceUrlActivity"
             android:exported="true" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name="com.crystalstudio.handymap.MainActivity"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
